# robinsons_auctioneers

./: README.md  bycrypt.py  docker-compose.yml  package-lock.json
Backend/: Cargo.toml  Dockerfile  fly.toml  robinsons_auctioneers.db
Backend/src/: authentication.rs  crud.rs  database.rs  images.rs  main.rs  queries.rs  response.rs  structs.rs
Frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
Frontend/src/: App.jsx  helpers.js  main.jsx  utils.js
Frontend/src/components/: AuctionCard.jsx  BidModal.jsx  CreateAuctionModal.jsx  EditAuctionModal.jsx  Navbar.jsx  NewAdminModal.jsx
Frontend/src/context/: AuthContext.jsx
Frontend/src/pages/: AdminPage.jsx  AuctionDetailPage.jsx  DashboardPage.jsx  HomePage.jsx  LoginPage.jsx
